# Sonar-odometry

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yaml
ros2_ws/src/sonar_odometry/: package.xml  setup.cfg  setup.py
ros2_ws/src/sonar_odometry/config/: sonar_odometry.yaml
ros2_ws/src/sonar_odometry/launch/: sonar_odometry.launch.py
ros2_ws/src/sonar_odometry/sonar_odometry/: ekf.py  feature_matching.py  gps_path.py  image_processing.py  sonar_odometry_node.py
ros2_ws/src/test/: sonar_pipeline_test.ipynb
ros2_ws/src/tf_static_publisher/config/: transforms.yaml
ros2_ws/src/tf_static_publisher/launch/: tf_static_launch.py
ros2_ws/src/tf_static_publisher/src/: tf_publisher.cpp
