<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sonar_odometry</name>
  <version>0.1.0</version>
  <description>Sonar Inertial Odometry using Extended Kalman Filter (AKAZE feature matching + IMU fusion).</description>

  <maintainer email="adaca@dtu.dk">Your Name</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>marine_acoustic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>builtin_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
